# telemetryjet-cli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE.md  README.md  rest_api.postman_collection.json
devops/: build.sh  build_init.sh  run.sh  run_me.sh  windows-installer.iss  xcode_init.sh
devops/inno_setup/: environment.iss  windows-installer.iss
devops/package-config/linux/: package-configure.sh  repository-configure.sh
devops/package-config/linux/DEBIAN/: control
devops/package-config/linux/deb/DEBIAN/: control
include/: test.h
lib/: CMakeLists.txt
lib/libserialport/: CMakeLists.txt
lib/tray/: CMakeLists.txt
lib/tray/include/: tray.h
resources/: README.txt  icon.afdesign  logo.c
src/: constants.h  device.cpp  device.hpp  deviceManager.cpp  deviceManager.hpp  logger.hpp  main.cpp  server.cpp  server.h  simpleTimer.cpp  simpleTimer.hpp  version.h.in
src/OLD/cache/: Cache.h  InMemoryCache.cpp
src/OLD/database/: Database.h
src/OLD/database/sqlite/: SqliteDatabase.cpp  sqliteDatabaseDashboards.cpp  sqliteDatabaseData.cpp
src/OLD/deviceManager/: DeviceManager.h
src/OLD/webServer/: WebServer.h
src/config/: configManager.cpp  configManager.h
src/core/: cache.h  data_cache.cpp  data_cache.h  data_point.cpp  data_point.h  data_source.cpp  data_source.h  network.cpp  network.h
src/core/data_sources/: file_data_source.cpp  file_data_source.h  output_file_data_source.cpp  output_file_data_source.h
src/core/data_sources/base/file-input/: file_input.cpp  file_input.h
src/core/data_sources/base/file-output/: file_output.cpp  file_output.h
src/core/data_sources/base/serial-stream/: serial_stream.cpp  serial_stream.h
src/core/data_sources/bidirectional/key-value-stream/: key_value_stream.cpp  key_value_stream.h
src/core/data_sources/bidirectional/mqtt-client/: mqtt_client.cpp  mqtt_client.h
src/core/data_sources/bidirectional/mqtt-server/: mqtt_server.cpp  mqtt_server.h
src/core/data_sources/bidirectional/telemetryjet-arduino-sdk/: telemetryjet_arduino_sdk.cpp  telemetryjet_arduino_sdk.h
src/core/data_sources/bidirectional/telemetryjet-server/: telemetryjet_server.cpp  telemetryjet_server.h
src/core/data_sources/console/: console_data_source.cpp  console_data_source.h
src/core/data_sources/csv/: csv_data_source.cpp  csv_data_source.h  csv_file_output.cpp  csv_file_output.h
src/core/data_sources/input/console-input/: console_input.cpp  console_input.h
src/core/data_sources/input/csv-file-input/: csv_file_input.cpp  csv_file_input.h
src/core/data_sources/key_value_file/: key_value_file.cpp  key_value_file.h
src/core/data_sources/key_value_stream/: key_value_stream.cpp  key_value_stream.h
src/core/data_sources/nmea_0183/: nmea_0183_device.h
src/core/data_sources/system_stats/: system_stats_data_source.cpp  system_stats_data_source.h  system_usage_statistics.h  system_usage_statistics_win32.cpp
src/core/data_sources/test/: test_data_source.cpp  test_data_source.h
src/data/: dataCache.cpp  dataCache.h  dataTypes.h  database.cpp  database.h  recordTypes.h
src/device/: device.cpp  device.hpp  deviceManager.cpp  deviceManager.hpp
src/devices/: device.h  device_manager.cpp  device_manager.h
src/devices/protocols/mock/: mock_device.cpp  mock_device.h
src/devices/protocols/nmea_0183/: nmea_0183_device.cpp  nmea_0183_device.h
src/devices/protocols/system_usage/: system_usage_device.cpp  system_usage_device.h  system_usage_statistics.cpp  system_usage_statistics.h
src/main/: main.cpp  test.cpp
src/model/: config_item.cpp  config_item.h  dashboard.cpp  dashboard.h  data_frame.cpp  data_frame.h  data_point.cpp  data_point.h  device.cpp  device.h  log.cpp  log.h  records.h  server.cpp  server.h  system.cpp  system.h
src/server/: apiServer.cpp  apiServer.h
src/services/: ServiceManager.cpp  ServiceManager.h  service_manager.cpp  service_manager.h
src/services/api/rest/: rest_api_server.cpp  rest_api_server.h  rest_api_server_impl.cpp  rest_api_server_impl.h
src/services/api/streaming/: streaming_server.cpp  streaming_server.h  websocket_server.cpp  websocket_server.h
src/services/cache/: InMemoryCache.cpp  InMemoryCache.h
src/services/config/: Config.h  config.cpp  config.h  data_point_cache.cpp  data_point_cache.h  json_env_config.cpp  json_env_config.h  persisted_config.cpp  persisted_config.h
src/services/data_cache/: cache.cpp  cache.h  in_memory_cache.cpp  in_memory_cache.h
src/services/database/: database.h  sqlite_database.cpp  sqlite_database.h
src/services/database/sqlite/: SqliteDatabase.cpp  SqliteDatabase.h  sqliteDatabaseData.cpp  sqliteDatabaseDebugLogs.cpp  sqlite_database.cpp  sqlite_database.h  sqlite_database_config_items.cpp  sqlite_database_dashboards.cpp  sqlite_database_data_frames.cpp  sqlite_database_data_points.cpp  sqlite_database_devices.cpp  sqlite_database_logs.cpp  sqlite_database_servers.cpp  sqlite_database_systems.cpp
src/services/logger/: ConsoleLogger.cpp  ConsoleLogger.h  Logger.h  console_logger.cpp  console_logger.h  logger.cpp  logger.h
src/services/model/: device_record_manager.cpp  device_record_manager.h  log_record_manager.cpp  log_record_manager.h  system_record_manager.cpp  system_record_manager.h
src/services/parser/: parser.h
src/services/socketServer/: SocketServer.h
src/ui/tray/: tray_ui.cpp  tray_ui.h  tray_ui_appkit.cpp  tray_ui_gtk.cpp  tray_ui_winapi.cpp
src/utility/: json_utils.h  path_utils.h  serial_wrapper.cpp  serial_wrapper.h  simple_timer.cpp  simple_timer.h  timeUtils.h  time_utils.h
src/utility/csv/: csv_parser.cpp  csv_parser.h
src/utility/encoding/aws-sig-v4/: awsv4.cpp  awsv4.h
src/utility/encoding/base64/: base64.cpp  base64.h
src/utility/encoding/cobs/: cobs.cpp  cobs.h
src/utility/glob/: glob.cpp  glob.h
src/utility/key_value/: key_value_utils.cpp  key_value_utils.h
src/utility/messagepack/: messagepack.cpp  messagepack.h
src/utility/sdl/: sdl.cpp  sdl.h
src/utility/serial/: serial_wrapper.cpp  serial_wrapper.h
src/utility/timer/: simple_timer.cpp  simple_timer.h
(+35 files in other folders)
